tests/baselines/reference/assignmentToReferenceTypes.errors.txt
tests/cases/compiler/assignmentToReferenceTypes.ts(5,1): error TS2708: Cannot use namespace 'M' as a value.
tests/cases/compiler/assignmentToReferenceTypes.ts(9,1): error TS2539: Cannot assign to 'C' because it is not a variable.
tests/cases/compiler/assignmentToReferenceTypes.ts(13,1): error TS2539: Cannot assign to 'E' because it is not a variable.
tests/cases/compiler/assignmentToReferenceTypes.ts(16,1): error TS2539: Cannot assign to 'f' because it is not a variable.


==== tests/cases/compiler/assignmentToReferenceTypes.ts (4 errors) ====
    // Should all be allowed
    
    module M {
    }
    M = null;
    ~
!!! error TS2708: Cannot use namespace 'M' as a value.
    
    class C {
    }
    C = null;
    ~
!!! error TS2539: Cannot assign to 'C' because it is not a variable.
    
    enum E {
    }
    E = null;
    ~
!!! error TS2539: Cannot assign to 'E' because it is not a variable.
    
    function f() { }
    f = null;
    ~
!!! error TS2539: Cannot assign to 'f' because it is not a variable.
    
    var x = 1;
    x = null;
    
    function g(x) {
        x = null;
    }